--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,42 @@
-.currently-reading { 
-
+:root {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 15px;
 }
 
-.currently-reading .currently-reading-text { 
-    font-size: 24px;
+.currently-reading p {
+  border-bottom: 1px solid #ccc;
+  margin: 5px;
 }
 
-.currently-reading .currently-reading-text .currentword { 
-    font-size: 24px;
-    color: red;
+.container {
+  border: 1px solid #ccc;
+  margin: 5px;
+  padding: 8px;
+}
+
+.currently-reading .currently-reading-text {
+  font-size: 24px;
+}
+
+.currently-reading .currently-reading-text .currentword {
+  font-size: 24px;
+  color: red;
+}
+
+.controls {
+  display: flex;
+  justify-content: center;
+}
+.controls button {
+  cursor: pointer;
+  padding: 5px;
+  background-color: white;
+  border: 1px solid #ccc;
+  margin: 5px;
+  border-radius: 5%;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+}
+
+.controls button:hover {
+  background-color: #ccc;
 }
